[gd_scene load_steps=7 format=3 uid="uid://dgp4s8ucc0j6n"]

[ext_resource type="Theme" uid="uid://bhwwwa4jiaiop" path="res://src/ui_theme.tres" id="1_13w5h"]
[ext_resource type="Script" path="res://src/main.gd" id="1_lyv0c"]
[ext_resource type="Script" path="res://src/ui_manager.gd" id="2_hmnjv"]
[ext_resource type="PackedScene" uid="uid://g0s3vevocg3" path="res://src/preview_subviewport_container.tscn" id="4_ero0u"]

[sub_resource type="LabelSettings" id="LabelSettings_8s6nw"]

[sub_resource type="LabelSettings" id="LabelSettings_bugng"]

[node name="Main" type="Control" node_paths=PackedStringArray("ui_manager", "load_rom_dialog", "load_file_dialog", "save_xml_button", "save_xml_dialog", "save_seq_button", "save_seq_dialog", "animation_list_container", "opcode_list_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_13w5h")
script = ExtResource("1_lyv0c")
ui_manager = NodePath("HBoxContainer/SettingsPanel")
load_rom_dialog = NodePath("HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/LoadRom/LoadRomDialog")
load_file_dialog = NodePath("HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/LoadSEQ/LoadFileDialog")
save_xml_button = NodePath("HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsXml")
save_xml_dialog = NodePath("HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsXml/SaveXmlDialog")
save_seq_button = NodePath("HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsSEQ")
save_seq_dialog = NodePath("HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsSEQ/SaveSeqDialog")
animation_list_container = NodePath("HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/ScrollContainer/AnimationListGridContainer")
opcode_list_container = NodePath("HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/ScrollContainer/Opcodes")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1121.0
grow_vertical = 2

[node name="SettingsPanel" type="PanelContainer" parent="HBoxContainer" node_paths=PackedStringArray("seq_options", "animations_pointers_text", "animations_bytes_text", "shp_options", "sprite_options", "patch_name_edit", "author_name_edit", "patch_description_edit", "animation_id_spinbox", "animation_name_options", "row_spinbox", "pointer_index_spinbox", "preview_viewport")]
layout_mode = 2
script = ExtResource("2_hmnjv")
seq_options = NodePath("MarginContainer/VBoxContainer/Info/SeqFileOptions")
animations_pointers_text = NodePath("MarginContainer/VBoxContainer/Info/NumEmptyAnimationPointers")
animations_bytes_text = NodePath("MarginContainer/VBoxContainer/Info/NumEmptySeqBytes")
shp_options = NodePath("MarginContainer/VBoxContainer/Info/ShpFileOptions")
sprite_options = NodePath("MarginContainer/VBoxContainer/Info/SpriteOptions")
patch_name_edit = NodePath("MarginContainer/VBoxContainer/Info/PatchNameLineEdit")
author_name_edit = NodePath("MarginContainer/VBoxContainer/Info/AuthorLineEdit")
patch_description_edit = NodePath("MarginContainer/VBoxContainer/DescriptionTextEdit")
animation_id_spinbox = NodePath("../AnimationEditor/MarginContainer/VBoxContainer/Options/IdSpinBox")
animation_name_options = NodePath("../AnimationEditor/MarginContainer/VBoxContainer/Options/AnimationOptionButton")
row_spinbox = NodePath("../AnimationEditor/MarginContainer/VBoxContainer/Functions/RowSpinBox")
pointer_index_spinbox = NodePath("../AnimationsList/MarginContainer/VBoxContainer/Functions/PointerSpinBox")
preview_viewport = NodePath("MarginContainer/VBoxContainer/PreviewSubViewportContainer")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/SettingsPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SettingsPanel/MarginContainer"]
layout_mode = 2

[node name="LoadRom" type="Button" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load ROM
"

[node name="LoadRomDialog" type="FileDialog" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/LoadRom"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(500, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.bin")
use_native_dialog = true

[node name="LoadSEQ" type="Button" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Load SEQ
"

[node name="LoadFileDialog" type="FileDialog" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/LoadSEQ"]
title = "Open a File"
initial_position = 1
size = Vector2i(500, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.seq")
use_native_dialog = true

[node name="Info" type="GridContainer" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="SeqFile" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "SEQ: "
horizontal_alignment = 2

[node name="SeqFileOptions" type="OptionButton" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2

[node name="EmptyAnimationPointers" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "Animation Pointers: "
horizontal_alignment = 2

[node name="NumEmptyAnimationPointers" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "0/256"
label_settings = SubResource("LabelSettings_8s6nw")

[node name="EmptySeqBytes" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "Bytes: "
horizontal_alignment = 2

[node name="NumEmptySeqBytes" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "2048/2048"
label_settings = SubResource("LabelSettings_bugng")

[node name="ShpFile" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "SHP: "
horizontal_alignment = 2

[node name="ShpFileOptions" type="OptionButton" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2

[node name="EmptyFramePointers" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "Frame Pointers: "
horizontal_alignment = 2

[node name="NumEmptyFramePoitners" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "0/256"
label_settings = SubResource("LabelSettings_8s6nw")

[node name="EmptyShpBytes" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "Bytes: "
horizontal_alignment = 2

[node name="NumEmptyShpBytes" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "2048/2048"
label_settings = SubResource("LabelSettings_bugng")

[node name="Sprite" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "Sprite:"
horizontal_alignment = 2

[node name="SpriteOptions" type="OptionButton" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2

[node name="PatchNameLabel" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "Patch Name: "
horizontal_alignment = 2

[node name="PatchNameLineEdit" type="LineEdit" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
placeholder_text = "default_patch_name"

[node name="AuthorLabel" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
text = "Author: "
horizontal_alignment = 2

[node name="AuthorLineEdit" type="LineEdit" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Default Author Name"

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Patch Description: "
horizontal_alignment = 1

[node name="DescriptionTextEdit" type="TextEdit" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Patch description goes here..."
wrap_mode = 1

[node name="PreviewLabel" type="Label" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Preview:"

[node name="PreviewSubViewportContainer" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" instance=ExtResource("4_ero0u")]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="SaveAsXml" type="Button" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Save XML Patch
"

[node name="SaveXmlDialog" type="FileDialog" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsXml"]
initial_position = 1
size = Vector2i(500, 400)
access = 2
filters = PackedStringArray("*.xml")
use_native_dialog = true

[node name="SaveAsSEQ" type="Button" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Save as SEQ
"

[node name="SaveSeqDialog" type="FileDialog" parent="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsSEQ"]
auto_translate_mode = 1
initial_position = 1
size = Vector2i(500, 400)
access = 2
filters = PackedStringArray("*.seq")
use_native_dialog = true

[node name="AnimationsList" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/AnimationsList"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/AnimationsList/MarginContainer"]
layout_mode = 2

[node name="AddPointer" type="Button" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Pointer"

[node name="Functions" type="HBoxContainer" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DeletePointer" type="Button" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/Functions"]
layout_mode = 2
text = "Delete Pointer"

[node name="PointerSpinBox" type="SpinBox" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/Functions"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="AnimationListGridContainer" type="GridContainer" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
columns = 4

[node name="Pointer ID" type="Label" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/ScrollContainer/AnimationListGridContainer"]
layout_mode = 2
text = "Pointer ID"
horizontal_alignment = 1

[node name="Anim ID" type="Label" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/ScrollContainer/AnimationListGridContainer"]
layout_mode = 2
text = "Anim ID"
horizontal_alignment = 1

[node name="Desription" type="Label" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/ScrollContainer/AnimationListGridContainer"]
layout_mode = 2
text = "Description"
horizontal_alignment = 1

[node name="Opcodes" type="Label" parent="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/ScrollContainer/AnimationListGridContainer"]
layout_mode = 2
text = "Opcodes"
horizontal_alignment = 1

[node name="AnimationEditor" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/AnimationEditor"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/AnimationEditor/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NewAnimation" type="Button" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add New Animation"

[node name="DeleteAnimation" type="Button" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delete Current Animation"

[node name="Options" type="GridContainer" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="IdLabel" type="Label" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
text = "Anim ID"
horizontal_alignment = 1

[node name="AnimOptLabel" type="Label" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
text = "Description
"
horizontal_alignment = 1

[node name="IdSpinBox" type="SpinBox" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
alignment = 2
editable = false

[node name="AnimationOptionButton" type="OptionButton" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true

[node name="Functions" type="HBoxContainer" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Row" type="Label" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Functions"]
layout_mode = 2
text = "Row: "

[node name="RowSpinBox" type="SpinBox" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Functions"]
layout_mode = 2

[node name="InsertOpcode" type="Button" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Functions"]
layout_mode = 2
text = "Insert Opcode"

[node name="DeleteOpcode" type="Button" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Functions"]
layout_mode = 2
text = "Delete Opcode"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Opcodes" type="GridContainer" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 5

[node name="#" type="Label" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/ScrollContainer/Opcodes"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
text = "Row"
horizontal_alignment = 1

[node name="Opcode" type="Label" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/ScrollContainer/Opcodes"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Opcode"
horizontal_alignment = 1

[node name="Param1" type="Label" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/ScrollContainer/Opcodes"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Param1"
horizontal_alignment = 1

[node name="Param2" type="Label" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/ScrollContainer/Opcodes"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Param2"
horizontal_alignment = 1

[node name="Param3" type="Label" parent="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/ScrollContainer/Opcodes"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Param3"
horizontal_alignment = 1

[connection signal="pressed" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/LoadRom" to="." method="_on_load_rom_pressed"]
[connection signal="file_selected" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/LoadRom/LoadRomDialog" to="." method="_on_load_rom_dialog_file_selected"]
[connection signal="pressed" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/LoadSEQ" to="." method="_on_load_seq_pressed"]
[connection signal="file_selected" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/LoadSEQ/LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
[connection signal="item_selected" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info/SeqFileOptions" to="HBoxContainer/SettingsPanel" method="_on_seq_file_options_item_selected"]
[connection signal="item_selected" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info/ShpFileOptions" to="." method="_on_shp_file_options_item_selected"]
[connection signal="item_selected" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/Info/SpriteOptions" to="." method="_on_sprite_options_item_selected"]
[connection signal="pressed" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsXml" to="." method="_on_save_as_xml_pressed"]
[connection signal="file_selected" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsXml/SaveXmlDialog" to="." method="_on_save_xml_dialog_file_selected"]
[connection signal="pressed" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsSEQ" to="." method="_on_save_as_seq_pressed"]
[connection signal="file_selected" from="HBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SaveAsSEQ/SaveSeqDialog" to="." method="_on_save_seq_dialog_file_selected"]
[connection signal="pressed" from="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/AddPointer" to="." method="_on_add_pointer_pressed"]
[connection signal="pressed" from="HBoxContainer/AnimationsList/MarginContainer/VBoxContainer/Functions/DeletePointer" to="." method="_on_delete_pointer_pressed"]
[connection signal="pressed" from="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/HBoxContainer/NewAnimation" to="." method="_on_new_animation_pressed"]
[connection signal="pressed" from="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/HBoxContainer/DeleteAnimation" to="." method="_on_delete_animation_pressed"]
[connection signal="item_selected" from="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Options/AnimationOptionButton" to="." method="_on_animation_option_button_item_selected"]
[connection signal="pressed" from="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Functions/InsertOpcode" to="." method="_on_insert_opcode_pressed"]
[connection signal="pressed" from="HBoxContainer/AnimationEditor/MarginContainer/VBoxContainer/Functions/DeleteOpcode" to="." method="_on_delete_opcode_pressed"]
